--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
 }
 
 body {
-    background:black;
+    background:blue;
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -278,4 +278,5 @@ function showNextQuote() {
 }
 </script>
 </body>
+
 </html>
